Converted to open source odf/ods format for use with libreoffice calc

--- a/shipcard.cmp
+++ b/shipcard.cmp
@@ -9,7 +9,7 @@
     <zoom>1</zoom>
   </Layout>
   <Layout combineReferences="false" width="700" height="1050" buffer="0" Name="territory" defaultCount="1" dpi="300" drawBorder="true">
-    <Element variable="@[title]" type="Text" x="10" y="45" width="680" height="80" borderthickness="0" autoscalefont="true" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="Title" font="Arial;54;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
+    <Element variable="@[title]" type="Text" x="10" y="44" width="680" height="81" borderthickness="0" autoscalefont="true" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="Title" font="Arial;54;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="Logistics @[logisticscapacity]" type="Text" x="10" y="605" width="340" height="45" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="1" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="SurfaceAttackField" font="Arial;24;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="Type: Territory" type="Text" x="10" y="125" width="340" height="40" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="Type" font="Arial;22;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="@[description]" type="Text" x="10" y="650" width="680" height="280" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="Description" font="Arial;20;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
@@ -19,9 +19,9 @@
     <Element variable="@[image]" type="Graphic" x="10" y="165" width="680" height="440" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="image" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="@[flavortext]" type="Text" x="10" y="930" width="680" height="110" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="FlavorText" font="Arial;18;0;0;1;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="@[name]" type="Text" x="10" y="10" width="680" height="35" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="Name" font="Arial;20;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
-    <Reference RelativePath="data\out\territories_all.csv" Default="true" />
-    <Reference RelativePath="data\out\territories_ru_start.csv" Default="false" />
-    <Reference RelativePath="data\out\territories_us_start.csv" Default="false" />
+    <Reference RelativePath="data\export\territories_all.csv" Default="true" />
+    <Reference RelativePath="data\export\territories_ru_start.csv" Default="false" />
+    <Reference RelativePath="data\export\territories_us_start.csv" Default="false" />
     <exportNameFormat />
     <exportRotation>0</exportRotation>
     <exportTransparentBackground>false</exportTransparentBackground>
@@ -43,9 +43,9 @@
     <Element variable="@[image]" type="Graphic" x="10" y="165" width="680" height="440" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="image" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="@[name]" type="Text" x="10" y="10" width="680" height="35" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="ShipName" font="Arial;20;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="@[flavortext]" type="Text" x="10" y="930" width="680" height="110" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="FlavorText" font="Arial;18;0;0;1;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
-    <Reference RelativePath="data\out\mil_ass_all.csv" Default="true" />
-    <Reference RelativePath="data\out\mil_ass_ru_start.csv" Default="false" />
-    <Reference RelativePath="data\out\mil_ass_us_start.csv" Default="false" />
+    <Reference RelativePath="data\export\mil_ass_all.csv" Default="true" />
+    <Reference RelativePath="data\export\mil_ass_ru_start.csv" Default="false" />
+    <Reference RelativePath="data\export\mil_ass_us_start.csv" Default="false" />
     <exportNameFormat />
     <exportRotation>0</exportRotation>
     <exportTransparentBackground>false</exportTransparentBackground>
@@ -63,9 +63,9 @@
     <Element variable="@[image]" type="Graphic" x="10" y="165" width="680" height="440" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="image" font="Arial;12;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="@[flavortext]" type="Text" x="10" y="930" width="680" height="110" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="FlavorText" font="Arial;18;0;0;1;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
     <Element variable="@[name]" type="Text" x="10" y="10" width="680" height="35" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="Name" font="Arial;20;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
-    <Reference RelativePath="data\out\actions_all.csv" Default="true" />
-    <Reference RelativePath="data\out\actions_ru_start.csv" Default="false" />
-    <Reference RelativePath="data\out\actions_us_start.csv" Default="false" />
+    <Reference RelativePath="data\export\actions_all.csv" Default="true" />
+    <Reference RelativePath="data\export\actions_ru_start.csv" Default="false" />
+    <Reference RelativePath="data\export\actions_us_start.csv" Default="false" />
     <exportNameFormat />
     <exportRotation>0</exportRotation>
     <exportTransparentBackground>false</exportTransparentBackground>
