--- a/shipcard.cmp
+++ b/shipcard.cmp
@@ -74,6 +74,19 @@
     <exportHeight>1200</exportHeight>
     <zoom>1</zoom>
   </Layout>
+  <Layout combineReferences="false" width="700" height="1050" buffer="0" Name="turn_reference" defaultCount="1" dpi="300" drawBorder="true">
+    <Element variable="Turn Reference Card" type="Text" x="13" y="53" width="680" height="79" borderthickness="0" autoscalefont="true" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="Title" font="Arial;54;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
+    <Element variable="Ver. @[version]" type="Text" x="10" y="10" width="680" height="30" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="2" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="Version" font="Arial;18;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
+    <Element variable="@[text]" type="Text" x="10" y="140" width="680" height="900" borderthickness="0" autoscalefont="false" lockaspect="false" keeporiginalsize="false" outlinethickness="0" rotation="0" horizontalalign="0" verticalalign="0" opacity="255" tilesize="" lineheight="14" wordspace="0" justifiedtext="false" name="Description" font="Arial;27;0;0;0;0" elementcolor="0x000000FF" bordercolor="0x000000FF" backgroundcolor="0x00000000" enabled="true" outlinecolor="0x000000FF" />
+    <Reference RelativePath="data\export\reference.csv" Default="true" />
+    <exportNameFormat />
+    <exportRotation>0</exportRotation>
+    <exportTransparentBackground>false</exportTransparentBackground>
+    <exportPDFAsPageBack>false</exportPDFAsPageBack>
+    <exportWidth>900</exportWidth>
+    <exportHeight>1200</exportHeight>
+    <zoom>1</zoom>
+  </Layout>
   <translatorName>Incept</translatorName>
   <lastExportPath>C:\Users\liber\Desktop\shipcard deck 1.7\RUS</lastExportPath>
   <jsEscapeSingleQuotes>false</jsEscapeSingleQuotes>
